# python-data-viz-workshop

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  environment.yml  pyproject.toml  style_tweaks.mplstyle
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: env-checks.yml  publish-slides.yml
data/: NYC_subway_daily.csv  README.md  stackoverflow_tag_co_occurrences.csv  weather.csv
data/collection/: README.md  earthquakes.ipynb  stackoverflow.ipynb  subway.ipynb  weather.ipynb
media/: README.md
notebooks/: 0-check_your_env.ipynb  1-getting_started_with_matplotlib.ipynb  2-animations.ipynb  README.md  check_env.py  utils.py  workbook.ipynb
slides/: 0-introduction.ipynb  1-getting_started_with_matplotlib.ipynb  4-outro.ipynb  README.md  generate_slides.sh  utils.py
slides/_template/: README.md  index.html.j2
slides/html/: 0-introduction.slides.html  1-getting_started_with_matplotlib.slides.html  3-interactivity.slides.html  README.md
slides/templates/: outro.ipynb
slides/templates/larger_font/: index.html.j2
slides/templates/regular/: index.html.j2
