[project]
name = "python-data-viz-workshop"
version = "3.0.0"
description = "A workshop on data visualization in Python created by Stefanie Molin"
readme = "README.md"
license-files = [ "LICENSE" ]
authors = [
  { name = "Stefanie Molin", email = "python-data-viz-workshop@stefaniemolin.com" },
]
requires-python = ">=3.10"
dependencies = [
    "bokeh==3.4.1",
    "ffmpeg",
    "geopandas==0.14.4",
    "jupyterlab>=4.1.8",
    "matplotlib==3.8.4",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "seaborn==0.13.2",
    "shapely==2.0.4",
    "geoviews==1.12.0",
    "holoviews==1.18.3",
    "hvplot==0.9.2",
    "panel==1.4.2",
]

[dependency-groups]
slides = [
    "nbmerge>=0.0.4",
]
